@@ -286,10 +286,6 @@ class Event < ActiveRecord::Base
     end.to_s
   end
 
-  def wall_note?
-    target.noteable_type.blank?
-  end
-
   def note_target_type
     if target.noteable_type.present?
       target.noteable_type.titleize
