@@ -251,10 +251,6 @@ class Note < ActiveRecord::Base
     for_merge_request? && for_diff_line?
   end
 
-  def for_wall?
-    noteable_type.blank?
-  end
-
   # override to return commits, which are not active record
   def noteable
     if for_commit?
@@ -295,8 +291,6 @@ class Note < ActiveRecord::Base
   def noteable_type_name
     if noteable_type.present?
       noteable_type.downcase
-    else
-      "wall"
     end
   end
 
