@@ -1,1 +1,0 @@
-= render 'note_message'
