@@ -1,23 +1,0 @@
-%div.wall-page
-  %ul.notes
-
-  - if can? current_user, :write_note, @project
-    .note-form-holder
-      = form_for [@project, @note], remote: true, html: { multipart: true, id: nil, class: "new_note wall-note-form" }, authenticity_token: true do |f|
-        = note_target_fields
-        .note_text_and_preview
-          = f.text_area :note, size: 255, class: 'note_text js-note-text js-gfm-input turn-on'
-        .note-form-actions
-          .buttons
-            = f.submit 'Add Comment', class: "btn comment-btn btn-grouped js-comment-button"
-
-          .note-form-option
-            %a.choose-btn.btn.btn-small.js-choose-note-attachment-button
-              %i.icon-paper-clip
-                %span Choose File ...
-            &nbsp;
-            %span.file_name.js-attachment-filename File name...
-            = f.file_field :attachment, class: "js-note-attachment-input hidden"
-
-          .hint.pull-right CTRL + Enter to send message
-        .clearfix
