@@ -33,6 +33,7 @@ v 7.0.0
   - Overall performance improvements
   - Skip init script check on omnibus-gitlab
   - Be more selective when killing stray Sidekiqs
+  - Remove wall feature (no data loss - you can take it from database)
 
 v 6.9.2
   - Revert the commit that broke the LDAP user filter
